--- a/.github/workflows/xtensa.yml
+++ b/.github/workflows/xtensa.yml
@@ -28,12 +28,7 @@ on:
 jobs:
   f1_unit_tests:
     runs-on: ubuntu-latest
-    # runs only scheduled or dispatched but is also run by ci in
-    # tests_post.yml after pr merge.
-    if: |
-      inputs.is-scheduled == 'TRUE' ||
-      inputs.is-dispatched == 'TRUE'
-      
+
     name: Fusion F1 Unit Tests (presubmit)
     steps:
       - uses: actions/checkout@v2
@@ -47,11 +42,6 @@ jobs:
           "cd /opt && tflite-micro/tensorflow/lite/micro/tools/ci_build/test_xtensa_fusion_f1.sh EXTERNAL tflite-micro/"
 
   hifi5_unit_tests:
-    # runs only scheduled or dispatched but is also run by ci in
-    # tests_post.yml after pr merge.
-    if: |
-      inputs.is-scheduled == 'TRUE' ||
-      inputs.is-dispatched == 'TRUE'  
     runs-on: ubuntu-latest
 
     name: Hifi5 Unit Tests (presubmit)
@@ -124,15 +114,10 @@ jobs:
 
   hifimini_unit_tests:
     runs-on: ubuntu-latest
-    # runs only scheduled or dispatched but is also run by ci in
-    # tests_post.yml after pr merge.
-    if: |
-      inputs.is-scheduled == 'TRUE' ||
-      inputs.is-dispatched == 'TRUE'
 
-    name: Hifimini Unit Tests (nightly)
+    name: Hifimini Unit Tests (presubmit)
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
           ref: ${{ inputs.trigger-sha }}
       - run: |
@@ -141,4 +126,3 @@ jobs:
           docker run --env XTENSA_TOOLS_VERSION=RI-2019.2-linux --rm -v `pwd`:/opt/tflite-micro ghcr.io/tflm-bot/xtensa:0.4 \
           /bin/bash -c \
           "cd /opt && tflite-micro/tensorflow/lite/micro/tools/ci_build/test_xtensa_hifimini.sh tflite-micro/"
-        
