--- a/.github/workflows/xtensa_presubmit.yml
+++ b/.github/workflows/xtensa_presubmit.yml
@@ -5,9 +5,9 @@
 # https://yaml-online-parser.appspot.com/
 #
 # This file can not be run stand-alone. It is called from tests_entry.yml as part of
-# the ci automation or from run_extensa.yml for scheduled or manual dispatch.
+# the ci automation or from run_xtensa.yml for scheduled or manual dispatch.
 
-name: Xtensa
+name: Xtensa Presubmit
 
 on:
   workflow_call:
@@ -26,35 +26,6 @@ on:
         required: true
 
 jobs:
-  f1_unit_tests:
-    runs-on: ubuntu-latest
-
-    name: Fusion F1 Unit Tests (presubmit)
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ inputs.trigger-sha }}
-      - run: |
-          rm -rf .git
-          echo ${{ secrets.tflm-bot-token }} | docker login ghcr.io -u tflm-bot --password-stdin
-          docker run --env XTENSA_TOOLS_VERSION=RI-2020.4-linux --rm -v `pwd`:/opt/tflite-micro ghcr.io/tflm-bot/xtensa:0.4 \
-          /bin/bash -c \
-          "cd /opt && tflite-micro/tensorflow/lite/micro/tools/ci_build/test_xtensa_fusion_f1.sh EXTERNAL tflite-micro/"
-
-  hifi5_unit_tests:
-    runs-on: ubuntu-latest
-
-    name: Hifi5 Unit Tests (presubmit)
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ inputs.trigger-sha }}
-      - run: |
-          rm -rf .git
-          echo ${{ secrets.tflm-bot-token }} | docker login ghcr.io -u tflm-bot --password-stdin
-          docker run --env XTENSA_TOOLS_VERSION=RI-2022.9-linux --rm -v `pwd`:/opt/tflite-micro ghcr.io/tflm-bot/xtensa:0.4 \
-          /bin/bash -c \
-          "cd /opt && tflite-micro/tensorflow/lite/micro/tools/ci_build/test_xtensa_hifi5.sh tflite-micro/"
 
   vision_p6_presubmit:
     runs-on: ubuntu-latest
@@ -111,18 +82,3 @@ jobs:
           docker run --env XTENSA_TOOLS_VERSION=RI-2020.4-linux --rm -v `pwd`:/opt/tflite-micro ghcr.io/tflm-bot/xtensa:0.4 \
           /bin/bash -c \
           "cd /opt && tflite-micro/tensorflow/lite/micro/tools/ci_build/test_xtensa_hifi3z.sh EXTERNAL tflite-micro/"
-
-  hifimini_unit_tests:
-    runs-on: ubuntu-latest
-
-    name: Hifimini Unit Tests (presubmit)
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ inputs.trigger-sha }}
-      - run: |
-          rm -rf .git
-          echo ${{ secrets.tflm-bot-token }} | docker login ghcr.io -u tflm-bot --password-stdin
-          docker run --env XTENSA_TOOLS_VERSION=RI-2019.2-linux --rm -v `pwd`:/opt/tflite-micro ghcr.io/tflm-bot/xtensa:0.4 \
-          /bin/bash -c \
-          "cd /opt && tflite-micro/tensorflow/lite/micro/tools/ci_build/test_xtensa_hifimini.sh tflite-micro/"
