--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           tensorflow/lite/micro/tools/ci_build/test_bazel.sh
 
-  bazel_tests_nooss:
+  bazel_tests_tflite_tools:
     runs-on: ubuntu-latest
 
     name: Bazel TFLite Tools (presubmit)
@@ -257,7 +257,7 @@ jobs:
           cd ../
           tflite-micro/tensorflow/lite/micro/tools/ci_build/test_x86_release.sh tflite-micro/
 
-  x86_no_release:
+  x86_default:
     runs-on: ubuntu-latest
 
     name: Makefile x86 Default (presubmit)
@@ -278,7 +278,7 @@ jobs:
           cd ../
           tflite-micro/tensorflow/lite/micro/tools/ci_build/test_x86_default.sh tflite-micro/
 
-  x86_example:
+  x86_out_of_tree:
     runs-on: ubuntu-latest
 
     name: Makefile x86 Out Of Tree (presubmit)
@@ -299,7 +299,7 @@ jobs:
           cd ../
           tflite-micro/tensorflow/lite/micro/tools/ci_build/test_x86_out_of_tree.sh tflite-micro/
  
-  x86_no_static:
+  x86_no_tflite_static_memory:
     runs-on: ubuntu-latest
 
     name: Makefile x86 No TFLite Static Memory (presubmit)
