Added train.py script to create, train and optimize the model.

--- a/tensorflow/lite/micro/examples/hello_world/BUILD
+++ b/tensorflow/lite/micro/examples/hello_world/BUILD
@@ -121,3 +121,13 @@ py_binary(
         ":evaluate",
     ],
 )
+
+py_binary(
+    name = "train",
+    srcs = ["train.py"],
+    srcs_version = "PY3",
+    deps = [
+        requirement("numpy"),
+        requirement("tensorflow-cpu"),
+    ],
+)
