Added a test for the quantized model. Fixed linting.

--- a/tensorflow/lite/micro/examples/hello_world/BUILD
+++ b/tensorflow/lite/micro/examples/hello_world/BUILD
@@ -114,7 +114,10 @@ py_binary(
 py_binary(
     name = "evaluate_test",
     srcs = ["evaluate_test.py"],
-    data = ["//tensorflow/lite/micro/examples/hello_world/models:hello_world_float.tflite"],
+    data = [
+        "//tensorflow/lite/micro/examples/hello_world/models:hello_world_float.tflite",
+        "//tensorflow/lite/micro/examples/hello_world/models:hello_world_int8.tflite",
+    ],
     python_version = "PY3",
     srcs_version = "PY3",
     deps = [
