Fix the build file for the new int8 model

--- a/tensorflow/lite/micro/examples/hello_world/BUILD
+++ b/tensorflow/lite/micro/examples/hello_world/BUILD
@@ -18,9 +18,11 @@ cc_library(
     name = "model",
     srcs = [
         "//tensorflow/lite/micro/examples/hello_world/models:generated_hello_world_float_model_cc",
+        "//tensorflow/lite/micro/examples/hello_world/models:generated_hello_world_int8_model_cc",
     ],
     hdrs = [
         "//tensorflow/lite/micro/examples/hello_world/models:generated_hello_world_float_model_hdr",
+        "//tensorflow/lite/micro/examples/hello_world/models:generated_hello_world_int8_model_hdr",
     ],
     copts = micro_copts(),
 )
@@ -116,7 +118,6 @@ py_binary(
     srcs = ["evaluate_test.py"],
     data = [
         "//tensorflow/lite/micro/examples/hello_world/models:hello_world_float.tflite",
-        "//tensorflow/lite/micro/examples/hello_world/models:hello_world_int8.tflite",
     ],
     python_version = "PY3",
     srcs_version = "PY3",
