Adding some deleted but required variables to makefile.

--- a/tensorflow/lite/micro/examples/hello_world/Makefile.inc
+++ b/tensorflow/lite/micro/examples/hello_world/Makefile.inc
@@ -1,6 +1,11 @@
 HELLO_WORLD_TEST_SRCS := \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/examples/hello_world/evaluate_test.cc
 
+HELLO_WORLD_SRCS := \
+$(TENSORFLOW_ROOT)tensorflow/lite/micro/examples/hello_world/evaluate_test.cc
+
+HELLO_WORLD_HDRS :=
+
 HELLO_WORLD_GENERATOR_INPUTS := \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/examples/hello_world/models/hello_world_float.tflite
 
@@ -16,7 +21,7 @@ $(HELLO_WORLD_TEST_SRCS),,$(HELLO_WORLD_GENERATOR_INPUTS)))
 
 # Builds a standalone binary.
 $(eval $(call microlite_test,hello_world,\
-$(HELLO_WORLD_SRCS),$(HELLO_WORLD_HDRS),$(HELLO_WORLD_GENERATOR_INPUTS)))
+$(HELLO_WORLD_SRCS),,$(HELLO_WORLD_GENERATOR_INPUTS)))
 
 # Add sources and headers generated from $(HELLO_WORLD_GENERATOR_INPUTS).
 HELLO_WORLD_SRCS += $(HELLO_WORLD_GENERATED_SRCS)
