feat(python): add crosscheck_tool, a cli for crosscheck.py
Add a command line client for the crosscheck module.

To run via bazel:

    $ bazel run <pkg>:crosscheck_tool -- $(realpath .tflite_path)

--- a/python/tflite_micro/test_utils/BUILD
+++ b/python/tflite_micro/test_utils/BUILD
@@ -31,3 +31,13 @@ py_test(
         ":crosscheck",
     ],
 )
+
+py_binary(
+    name = "crosscheck_tool",
+    srcs = [
+        "crosscheck_tool.py",
+    ],
+    deps = [
+        ":crosscheck",
+    ],
+)
