--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -25,7 +25,7 @@ jobs:
 
     steps:
       - uses: actions/setup-python@v4
-        with: 
+        with:
           python-version: '3.10'
       - uses: actions/checkout@v2
         with:
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install dependencies for sync
         run: |
-          sudo ./ci/install_bazel.sh
+          sudo ./ci/install_bazelisk.sh
           pip3 install numpy
 
       - name: Sync the code
