--- a/ci/Dockerfile.micro
+++ b/ci/Dockerfile.micro
@@ -31,6 +31,11 @@ RUN ln -s /usr/bin/clang-format-12 /usr/bin/clang-format
 
 # Install QEMU requirements emulation based tests.
 RUN apt-get install -y libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev ninja-build
+# Needed when using the Dockerfile locally.
+RUN git config --global --add safe.directory /opt/tflm
+
+# Needed when the docker container is used with GitHub actions.
+RUN git config --global --add safe.directory /github/workspace
 
 # Install yapf to check for Python formatting as part of the TFLM continuous
 # integration.
@@ -48,8 +53,6 @@ RUN pip install pandas
 RUN pip install matplotlib
 
 RUN pip install six
-
-# RUN pip install pyyaml requests psutil robotframework==4.0.1
 
 COPY ci/*.sh /install/
 RUN /install/install_bazelisk.sh
