disable asan/msan/ubsan for test

--- a/tensorflow/lite/micro/examples/recipes/BUILD
+++ b/tensorflow/lite/micro/examples/recipes/BUILD
@@ -18,6 +18,11 @@ py_test(
     name = "resource_variables_test",
     srcs = ["resource_variables_test.py"],
     srcs_version = "PY3",
+    tags = [
+        "noasan",
+        "nomsan",  # Python doesn't like these symbols from interpreter_wrapper_pybind.so
+        "noubsan",
+    ],
     deps = [
         ":resource_variables_lib",
         "//tensorflow/lite/micro/python/interpreter/src:tflm_runtime",
