--- a/.github/workflows/tests_post.yml
+++ b/.github/workflows/tests_post.yml
@@ -11,26 +11,7 @@ on:
       - labeled
 
 jobs:
-
-  ci_run_full:
-    runs-on: ubuntu-latest
-    steps:
-      - name: remove-cirun-full
-        if: ${{ contains(github.event.pull_request.labels.*.name, 'ci:run_full') }}
-        uses: actions/github-script@v5
-        with:
-          github-token: ${{ secrets.TFLM_BOT_REPO_TOKEN }}
-          script: |
-            github.rest.issues.removeLabel({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: 'ci:run_full'
-            })
-        continue-on-error: true
-
   xtensa_postmerge:
-    needs: [ci_run_full]
     if: ${{ github.event.pull_request.merged == true ||
             contains(github.event.pull_request.labels.*.name, 'ci:run_full') }}
     uses: ./.github/workflows/xtensa_postmerge.yml
@@ -53,4 +34,22 @@ jobs:
       pr_link: ${{ github.event.pull_request._links.html.href }}
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
+
+  ci_run_full:
+    needs: [issue_on_error]
+    runs-on: ubuntu-latest
+    steps:
+      - name: remove-cirun-full
+        if: ${{ contains(github.event.pull_request.labels.*.name, 'ci:run_full') }}
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.TFLM_BOT_REPO_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: 'ci:run_full'
+            })
+        continue-on-error: true
       
