--- a/.github/workflows/tests_post.yml
+++ b/.github/workflows/tests_post.yml
@@ -2,16 +2,18 @@ name: Post Tests
 # This is for tests that run on a PR post merge. This to optimize CI test suite time
 # for exceptionally long running test processes. Errors will still generate an
 # issue against the PR/commit so will be caught.
+# These tests also run on the ci:run_full label.
 
 on:
   pull_request_target:
     types:
       - closed
+      - labeled
 
 jobs:
-
   xtensa_postmerge:
-    if: ${{ github.event.pull_request.merged == true }}
+    if: ${{ github.event.pull_request.merged == true ||
+            contains(github.event.pull_request.labels.*.name, 'ci:run_full') }}
     uses: ./.github/workflows/xtensa_postmerge.yml
     with:
       trigger-sha: ${{ github.event.pull_request.head.sha }}
@@ -32,4 +34,22 @@ jobs:
       pr_link: ${{ github.event.pull_request._links.html.href }}
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
+
+  ci_run_full:
+    needs: [issue_on_error]
+    runs-on: ubuntu-latest
+    steps:
+      - name: remove-cirun-full
+        if: ${{ contains(github.event.pull_request.labels.*.name, 'ci:run_full') }}
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.TFLM_BOT_REPO_TOKEN }}
+          script: |
+            github.rest.issues.removeLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: 'ci:run_full'
+            })
+        continue-on-error: true
       
