Install numpy for riscv.

--- a/.github/workflows/riscv.yml
+++ b/.github/workflows/riscv.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           pip3 install Pillow
           pip3 install Wave
+          pip3 install numpy
       - name: Test
         run: |
           tensorflow/lite/micro/tools/ci_build/test_riscv.sh
