--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,15 +178,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.trigger-sha }}
-      - name: Install dependencies
-        run: |
-          pip3 install Pillow
-          pip3 install Wave
-          pip3 install numpy
       - name: Test
-        run: |
-          cd ../
-          tflite-micro/tensorflow/lite/micro/tools/ci_build/test_cortex_m_qemu.sh tflite-micro/
+        uses: docker://ghcr.io/tflm-bot/tflm-ci:latest
+        with:
+          args: /bin/sh -c tensorflow/lite/micro/tools/ci_build/test_cortex_m_qemu.sh tflite-micro/
 
   check_code_style:
     runs-on: ubuntu-latest
