--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,7 +179,7 @@ jobs:
         with:
           ref: ${{ inputs.trigger-sha }}
       - name: Check
-        uses: docker://ghcr.io/tflm-bot/tflm-ci:0.6
+        uses: docker://ghcr.io/tflm-bot/tflm-ci:latest
         with:
           args: /bin/sh -c "tensorflow/lite/micro/tools/ci_build/test_code_style.sh"
 
