Manually ran sync_from_upstream_tf to add tensorflow/lite/core/macros.h. (#1921)
BUG=http://b/279053959
NO_CHECK_TFLITE_FILES=manual sync from upstream

--- a/tensorflow/lite/kernels/internal/BUILD
+++ b/tensorflow/lite/kernels/internal/BUILD
@@ -10,7 +10,7 @@ package(
 
 cc_library(
     name = "common",
-    srcs = [],
+    srcs = ["common.cc"],
     hdrs = [
         "common.h",
         "optimized/neon_check.h",
@@ -19,6 +19,7 @@ cc_library(
     deps = [
         ":cppmath",
         ":types",
+        "//tensorflow/lite/core:macros",
         "@gemmlowp//:fixedpoint",
     ],
 )
@@ -57,6 +58,7 @@ cc_library(
 
 cc_library(
     name = "reference",
+    srcs = ["tensor_ctypes.cc"],
     hdrs = [
         "portable_tensor.h",
         "tensor_ctypes.h",
@@ -65,12 +67,15 @@ cc_library(
     deps = [
         ":types",
         "//tensorflow/lite/c:common",
+        "//tensorflow/lite/core:macros",
     ],
 )
 
 cc_library(
     name = "reference_base",
-    srcs = [],
+    srcs = glob([
+        "reference/*.cc",
+    ]),
     hdrs = glob([
         "reference/*.h",
         "reference/integer_ops/*.h",
@@ -93,6 +98,7 @@ cc_library(
         ":tensor",
         ":types",
         "//tensorflow/lite/c:common",
+        "//tensorflow/lite/core:macros",
         "//tensorflow/lite/kernels:kernel_util",
         "//tensorflow/lite/kernels:op_macros",
         "@gemmlowp//:fixedpoint",
@@ -156,6 +162,7 @@ cc_library(
         ":compatibility",
         ":cppmath",
         "//tensorflow/lite/c:common",
+        "//tensorflow/lite/core:macros",
         "//tensorflow/lite/kernels:op_macros",
         "@gemmlowp",
     ],
