Addes QEMU CI Workflow to github ci workflows. (#1929)
BUG=1891

Now that QEMU support is added #1892 and the dockerfile has been updated #1904 / b/279291175 we can add QEMU to the CI workflow with this PR.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,6 +167,22 @@ jobs:
           cd ../
           tflite-micro/tensorflow/lite/micro/tools/ci_build/test_bluepill_renode.sh tflite-micro/
 
+  cortex_m_qemu:
+    runs-on: ubuntu-latest
+
+    name: Cortex-M QEMU Unit Tests (presubmit)
+    steps:
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.trigger-sha }}
+      - name: Test
+        uses: docker://ghcr.io/tflm-bot/tflm-ci:latest
+        with:
+          args: /bin/sh -c tensorflow/lite/micro/tools/ci_build/test_cortex_m_qemu.sh tflite-micro/
+
   check_code_style:
     runs-on: ubuntu-latest
 
