--- a/tensorflow/lite/micro/python/interpreter/src/BUILD
+++ b/tensorflow/lite/micro/python/interpreter/src/BUILD
@@ -1,10 +1,41 @@
 load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
 load("@tflm_pip_deps//:requirements.bzl", "requirement")
+load(
+    "//tensorflow/lite/micro:build_def.bzl",
+    "micro_copts",
+)
+load(
+    "//tensorflow:extra_rules.bzl",
+    "tflm_python_op_resolver_friends",
+)
 
 package(
-    default_visibility = ["//visibility:public"],
     features = ["-layering_check"],
     licenses = ["notice"],
+)
+
+package_group(
+    name = "op_resolver_friends",
+    packages = tflm_python_op_resolver_friends(),
+)
+
+cc_library(
+    name = "python_ops_resolver",
+    srcs = [
+        "python_ops_resolver.cc",
+    ],
+    hdrs = [
+        "python_ops_resolver.h",
+    ],
+    copts = micro_copts(),
+    visibility = [
+        ":op_resolver_friends",
+    ],
+    deps = [
+        "//tensorflow/lite/micro:micro_compatibility",
+        "//tensorflow/lite/micro:op_resolvers",
+        "//tensorflow/lite/micro/kernels:micro_ops",
+    ],
 )
 
 # Append _lib at the end to avoid naming collision with the extension below
@@ -24,6 +55,7 @@ pybind_library(
         "shared_library.h",
     ],
     deps = [
+        ":python_ops_resolver",
         "//tensorflow/lite/micro:micro_framework",
         "//tensorflow/lite/micro:op_resolvers",
         "//tensorflow/lite/micro:recording_allocators",
@@ -46,10 +78,9 @@ pybind_extension(
 py_library(
     name = "tflm_runtime",
     srcs = ["tflm_runtime.py"],
-    data = [
-        ":interpreter_wrapper_pybind.so",
-    ],
+    data = [":interpreter_wrapper_pybind.so"],
     srcs_version = "PY3",
+    visibility = ["//visibility:public"],
     deps = [
         requirement("numpy"),
         "//tensorflow/lite/tools:flatbuffer_utils",
