--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -73,6 +73,17 @@ cc_library(
 )
 
 cc_library(
+    name = "micro_common",
+    hdrs = [
+        "micro_common.h",
+    ],
+    copts = micro_copts(),
+    deps = [
+        "//tensorflow/lite/c:common",
+    ],
+)
+
+cc_library(
     name = "fake_micro_context",
     srcs = [
         "fake_micro_context.cc",
@@ -214,9 +225,11 @@ cc_library(
 cc_library(
     name = "op_resolvers",
     srcs = [
+        "all_ops_resolver.cc",
         "micro_op_resolver.cc",
     ],
     hdrs = [
+        "all_ops_resolver.h",
         "micro_mutable_op_resolver.h",
         "micro_op_resolver.h",
     ],
