Adds TFLMRegistration to newly created MicroCommon.h (#1983)
Adds TFLMRegistration to newly created MicroCommon.h

First change in set of changes  to move TFLM entirely away from TfLite Registration struct and add reset into TFLM  explained @ the bottom of the following [Doc](https://docs.google.com/document/d/1giWrZQk1DnC1v-9uDDoos2zNBO06SLI7RatsOMu3RY8/edit?resourcekey=0-wkLBasqHyTZm3POas69tLQ#)

BUG=[b/279811848](https://b.corp.google.com/issues/279811848)

--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -73,6 +73,17 @@ cc_library(
 )
 
 cc_library(
+    name = "micro_common",
+    hdrs = [
+        "micro_common.h",
+    ],
+    copts = micro_copts(),
+    deps = [
+        "//tensorflow/lite/c:common",
+    ],
+)
+
+cc_library(
     name = "fake_micro_context",
     srcs = [
         "fake_micro_context.cc",
